--- a/index.html
+++ b/index.html
@@ -39,30 +39,30 @@
                 </div>
             </section>
             <hr>
-            <section class="why">
+            <section class="why-us">
                 <h2>Why Choose Us</h2>
-                <section class="why-us">
+                <div class="why-us-cards">
                     <div class="why-us-card">
                         <img src="media/small-class-size.jpg" alt="A teacher teaching a small class of 23 students">
                         <h3>Small Class Sizes</h3>
-                        <p>Small class sizes give teachers an advantage of tailoring the lesson to address each learner's needs. They help the teachers focus on learners individually instead of generally.</p>
+                        <p>Small class sizes give teachers an advantage of tailoring the lesson to address each learner's needs...</p>
                     </div>
                     <div class="why-us-card">
                         <img src="media/teacher-teaching.jpg" alt="A teacher explaining a concept to a learner">
                         <h3>Passionate Teachers</h3>
-                        <p>Our teachers love teaching. They are motivated when they see learners finally grasping core concepts and applying them to the real world</p>
+                        <p>Our teachers love teaching...</p>
                     </div>
                     <div class="why-us-card">
                         <img src="media/learners-playing.jpg" alt="Learners playing with their teachers outside the classroom">
                         <h3>Holistic Education</h3>
-                        <p>We believe that education doesn't just happen in the classroom. We encourage our learners to participate in various activities in school such as clubs and sports because they can learn from those and enrich their understanding. Statistics show that learners end up pursuing things that they learnt outside the classroom more than what they learn in the classroom.</p>
+                        <p>We believe that education doesn't just happen in the classroom...</p>
                     </div>
                     <div class="why-us-card">
                         <img src="media/church-service.jpg" alt="Learners participating in worship">
                         <h3>Christian Living</h3>
-                        <p>Christianity is at the core of everything we do here. We encourage learners to live and do everything to the glory of God. This helps them not only to grow into responsible and God-fearing citizens of Rwanda in the future, but also prepares them for eternity.</p>
+                        <p>Christianity is at the core of everything we do here...</p>
                     </div>
-                </section>
+                </div>
             </section>
             <hr>
             <section class="testimonials">
@@ -154,4 +154,5 @@
         </footer>
         <script src="js/script.js" defer></script>
     </body>
+
 </html>
