--- a/index.html
+++ b/index.html
@@ -45,22 +45,22 @@
                     <div class="why-us-card">
                         <img src="media/small-class-size.jpg" alt="A teacher teaching a small class of 23 students">
                         <h3>Small Class Sizes</h3>
-                        <p>Small class sizes give teachers an advantage of tailoring the lesson to address each learner's needs...</p>
+                        <p>Small class sizes give teachers an advantage of tailoring the lesson to address each learner's needs</p>
                     </div>
                     <div class="why-us-card">
                         <img src="media/teacher-teaching.jpg" alt="A teacher explaining a concept to a learner">
                         <h3>Passionate Teachers</h3>
-                        <p>Our teachers love teaching...</p>
+                        <p>Our qualified teachers love teaching.</p>
                     </div>
                     <div class="why-us-card">
                         <img src="media/learners-playing.jpg" alt="Learners playing with their teachers outside the classroom">
                         <h3>Holistic Education</h3>
-                        <p>We believe that education doesn't just happen in the classroom...</p>
+                        <p>We believe that everything is educative, not just activities in the classroom</p>
                     </div>
                     <div class="why-us-card">
                         <img src="media/church-service.jpg" alt="Learners participating in worship">
                         <h3>Christian Living</h3>
-                        <p>Christianity is at the core of everything we do here...</p>
+                        <p>Christianity is at the core of everything we do here. We ensure that learners aim to do everything to glorify God.</p>
                     </div>
                 </div>
             </section>
@@ -156,3 +156,4 @@
     </body>
 
 </html>
+
