--- a/about.html
+++ b/about.html
@@ -1,97 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>About Us | Rwimbogo Nursery and Primary School</title>
-        <meta name="description" content="Learn about the history, mission, and vision of Rwimbogo Nursery and Primary School.">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="css/styles.css">
-    </head>
-    <body>
-        <header>
-            <img src="media/logo.png" alt="School Logo" class="logo">
-            <nav class="navbar">
-                <ul class="nav-links">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="programs.html">Programs</a></li>
-                    <li><a href="admissions.html">Admissions</a></li>
-                    <li><a href="resources.html">Resources</a></li>
-                    <li><a href="contact.html">Contact Us</a></li>
-                    <li><a href="blog.html">Blogs</a></li>
-                </ul>
-                <button class="hamburger" aria-label="Toggle navigation">
-                    <i class="fa fa-bars"></i>
-                </button>
-            </nav>
-        </header>
+<head>
+    <title>About Us | Rwimbogo Nursery and Primary School</title>
+    <meta name="description" content="Learn about the history, mission, and vision of Rwimbogo Nursery and Primary School.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- External Resources -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+    <!-- HEADER -->
+    <header>
+        <img src="media/logo.webp" alt="School Logo" class="logo" loading="lazy">
+        <nav class="navbar">
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="programs.html">Programs</a></li>
+                <li><a href="admissions.html">Admissions</a></li>
+                <li><a href="resources.html">Resources</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="blog.html">Blogs</a></li>
+            </ul>
+            <button class="hamburger" aria-label="Toggle navigation">
+                <i class="fa fa-bars"></i>
+            </button>
+        </nav>
+    </header>
 
-        <main>
-            <!-- A simple hero section for the about page -->
-            <section class="hero-section hero-programs">
-                <div class="hero-content">
-                    <h1>About Our School</h1>
-                </div>
-            </section>
-            
-            <section class="about-intro">
-                <h2>Our Story</h2>
-                <p>Rwimbogo Nursery and Primary School is a Christian school located in Kanombe, near the Airport in Kigali, Rwanda. We have been providing quality, holistic education since 2001. With over 23 years of experience, we are dedicated to nurturing and empowering a smart generation of learners.</p>
-                <div class="about-image-grid">
-                    <img src="media/school-compound.jpg" alt="A photo of the Rwimbogo Nursery and Primary School building." class="rounded-lg shadow-md">
-                    <img src="media/christmas-party.jpg" alt="Students enjoying Christmas party." class="rounded-lg shadow-md">
-                    <img src="media/students-sharing.jpg" alt="School students relaxing happily outdoors." class="rounded-lg shadow-md">
-                </div>
-            </section>
-
-            <hr>
-
-            <section class="mission-vision-values">
-                <h2>Our Guiding Principles</h2>
-                <div class="principles-grid">
-                    <div class="principle-card">
-                        <h3>Our Mission</h3>
-                        <p>To empower through holistic quality education for a smart generation.</p>
-                    </div>
-                    <div class="principle-card">
-                        <h3>Our Vision</h3>
-                        <p>Enabling learners to acquire skills, knowledge, and values that will allow them to achieve their fullest potential.</p>
-                    </div>
-                    <div class="principle-card">
-                        <h3>Our Values</h3>
-                        <p>Our core values are Excellence, Charity, and Solidarity, which we instill in every student to prepare them for a life of purpose and service.</p>
-                    </div>
-                </div>
-            </section>
-
-            <hr>
-
-            <section class="cta-section">
-                <h2>Ready to Join Our Family?</h2>
-                <p>Learn more about our admissions process and how to enroll your child at our school.</p>
-                <a role="button" href="admissions.html">Enroll Your Child Now</a>
-            </section>
-        </main>
-
-        <footer>
-            <div class="footer-logo">
-                <a href="index.html">
-                    <img src="media/logo.png" alt="School Logo" class="logo">
-                </a>
+    <!-- MAIN CONTENT -->
+    <main>
+        <!-- HERO SECTION -->
+        <section class="hero-section hero-programs" style="background-image: linear-gradient(to right, rgba(0,31,91,0.8) 40%, rgba(0,31,91,0.2)), url('media/background-about.webp');">
+            <div class="hero-content">
+                <h1>About Our School</h1>
             </div>
-            <div class="quick-links">
-                <a href="index.html">Home</a>
-                <a href="about.html">About Us</a>
-                <a href="programs.html">Academics</a>
-                <a href="admissions.html">How to enroll</a>
-                <a href="resources.html">Resources</a>
+        </section>
+
+        <!-- INTRODUCTION -->
+        <section class="about-intro">
+            <h2>Our Story</h2>
+            <p>Rwimbogo Nursery and Primary School is a Christian school located in Kanombe, near the Airport in Kigali, Rwanda. We have been providing quality, holistic education since 2001. With over 23 years of experience, we are dedicated to nurturing and empowering a smart generation of learners.</p>
+            <div class="about-image-grid">
+                <picture>
+                    <source srcset="media/school-compound.webp" type="image/webp">
+                    <img src="media/school-compound.jpg" alt="A photo of the Rwimbogo Nursery and Primary School building." class="rounded-lg shadow-md" loading="lazy">
+                </picture>
+                <picture>
+                    <source srcset="media/christmas-party.webp" type="image/webp">
+                    <img src="media/christmas-party.jpg" alt="Students enjoying Christmas party." class="rounded-lg shadow-md" loading="lazy">
+                </picture>
+                <picture>
+                    <source srcset="media/students-sharing.webp" type="image/webp">
+                    <img src="media/students-sharing.jpg" alt="School students relaxing happily outdoors." class="rounded-lg shadow-md" loading="lazy">
+                </picture>
             </div>
-            <p>&copy;Rwimbogo Nursery and Primary School 2025</p>
-        </footer>
-        
-        <script src="js/script.js" defer></script>
-    </body>
+        </section>
+
+        <hr>
+
+        <!-- MISSION, VISION, VALUES -->
+        <section class="mission-vision-values">
+            <h2>Our Guiding Principles</h2>
+            <div class="principles-grid">
+                <div class="principle-card">
+                    <h3>Our Mission</h3>
+                    <p>To empower through holistic quality education for a smart generation.</p>
+                </div>
+                <div class="principle-card">
+                    <h3>Our Vision</h3>
+                    <p>Enabling learners to acquire skills, knowledge, and values that will allow them to achieve their fullest potential.</p>
+                </div>
+                <div class="principle-card">
+                    <h3>Our Values</h3>
+                    <p>Our core values are Excellence, Charity, and Solidarity, which we instill in every student to prepare them for a life of purpose and service.</p>
+                </div>
+            </div>
+        </section>
+
+        <hr>
+
+        <!-- CALL TO ACTION -->
+        <section class="cta-section">
+            <h2>Ready to Join Our Family?</h2>
+            <p>Learn more about our admissions process and how to enroll your child at our school.</p>
+            <a role="button" href="admissions.html">Enroll Your Child Now</a>
+        </section>
+    </main>
+
+    <!-- FOOTER -->
+    <footer>
+        <div class="footer-logo">
+            <a href="index.html">
+                <img src="media/logo.webp" alt="School Logo" class="logo" loading="lazy">
+            </a>
+        </div>
+        <div class="quick-links">
+            <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
+            <a href="programs.html">Academics</a>
+            <a href="admissions.html">How to enroll</a>
+            <a href="resources.html">Resources</a>
+        </div>
+        <p>&copy;Rwimbogo Nursery and Primary School 2025</p>
+    </footer>
+
+    <script src="js/script.js" defer></script>
+</body>
 </html>
