--- a/admissions.html
+++ b/admissions.html
@@ -1,93 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Admissions | Rwimbogo Nursery and Primary School</title>
-        <meta name="description" content="Learn about the admissions criteria and process at Rwimbogo Nursery and Primary School.">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="css/styles.css">
-    </head>
-    <body>
-        <header>
-            <img src="media/logo.png" alt="School Logo" class="logo">
-            <nav class="navbar">
-                <ul class="nav-links">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="programs.html">Programs</a></li>
-                    <li><a href="admissions.html">Admissions</a></li>
-                    <li><a href="resources.html">Resources</a></li>
-                    <li><a href="contact.html">Contact Us</a></li>
-                    <li><a href="blog.html">Blogs</a></li>
-                </ul>
-                <button class="hamburger" aria-label="Toggle navigation">
-                    <i class="fa fa-bars"></i>
-                </button>
-            </nav>
-        </header>
+<head>
+    <title>Admissions | Rwimbogo Nursery and Primary School</title>
+    <meta name="description" content="Learn about the admissions criteria and process at Rwimbogo Nursery and Primary School.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- External Resources -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+    <!-- HEADER -->
+    <header>
+        <img src="media/logo.webp" alt="School Logo" class="logo" loading="lazy">
+        <nav class="navbar">
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="programs.html">Programs</a></li>
+                <li><a href="admissions.html">Admissions</a></li>
+                <li><a href="resources.html">Resources</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="blog.html">Blogs</a></li>
+            </ul>
+            <button class="hamburger" aria-label="Toggle navigation">
+                <i class="fa fa-bars"></i>
+            </button>
+        </nav>
+    </header>
 
-        <main>
-            <section class="hero-section hero-admissions">
-                <div class="hero-content">
-                    <h1>Admissions</h1>
-                </div>
-            </section>
-
-            <section class="admissions-criteria">
-                <div class="criteria-card">
-                    <div class="card-content">
-                        <h2>General Admission Criteria</h2>
-                        <p>We welcome all prospective students who meet the following age requirements:</p>
-                        <ul>
-                            <li><strong>Nursery One:</strong> Must be <strong>3 years old and above</strong>.</li>
-                            <li><strong>Primary One:</strong> Must be <strong>6 years old and above</strong>.</li>
-                        </ul>
-                    </div>
-                    <img src="media/assembly.jpg" alt="Students in assembly." class="rounded-lg shadow-md">
-                </div>
-            </section>
-
-            <hr>
-
-            <section class="required-documents">
-                <h2>Required Documents</h2>
-                <p>To complete the admission process, please prepare the following documents:</p>
-                <ul>
-                    <li>Birth Certificate</li>
-                    <li>Academic report from previous school (for continuing learners)</li>
-                    <li>Student Identification</li>
-                    <li>Parental or Guardian Contact Information</li>
-                </ul>
-            </section>
-
-            <hr>
-
-            <section class="cta-section">
-                <h2>Ready for Your Child's Future?</h2>
-                <p>We are ready to guide your child towards a future of excellence and purpose.</p>
-                <a role="button" href="contact.html">Contact Us</a>
-            </section>
-        </main>
-
-        <footer>
-            <div class="footer-logo">
-                <a href="index.html">
-                    <img src="media/logo.png" alt="School Logo" class="logo">
-                </a>
+    <!-- MAIN CONTENT -->
+    <main>
+        <!-- HERO SECTION -->
+        <section class="hero-section hero-admissions" style="background-image: linear-gradient(to right, rgba(0,31,91,0.8) 40%, rgba(0,31,91,0.2)), url('media/background-admissions.webp');">
+            <div class="hero-content">
+                <h1>Admissions</h1>
             </div>
-            <div class="quick-links">
-                <a href="index.html">Home</a>
-                <a href="about.html">About Us</a>
-                <a href="programs.html">Academics</a>
-                <a href="admissions.html">How to enroll</a>
-                <a href="resources.html">Resources</a>
+        </section>
+
+        <!-- ADMISSIONS CRITERIA -->
+        <section class="admissions-criteria">
+            <div class="criteria-card">
+                <div class="card-content">
+                    <h2>General Admission Criteria</h2>
+                    <p>We welcome all prospective students who meet the following age requirements:</p>
+                    <ul>
+                        <li><strong>Nursery One:</strong> Must be <strong>3 years old and above</strong>.</li>
+                        <li><strong>Primary One:</strong> Must be <strong>6 years old and above</strong>.</li>
+                    </ul>
+                </div>
+                <picture>
+                    <source srcset="media/assembly.webp" type="image/webp">
+                    <img src="media/assembly.jpg" alt="Students in assembly." class="rounded-lg shadow-md" loading="lazy">
+                </picture>
             </div>
-            <p>&copy;Rwimbogo Nursery and Primary School 2025</p>
-        </footer>
-        
-        <script src="js/script.js" defer></script>
-    </body>
+        </section>
+
+        <hr>
+
+        <!-- REQUIRED DOCUMENTS -->
+        <section class="required-documents">
+            <h2>Required Documents</h2>
+            <p>To complete the admission process, please prepare the following documents:</p>
+            <ul>
+                <li>Birth Certificate</li>
+                <li>Academic report from previous school (for continuing learners)</li>
+                <li>Student Identification</li>
+                <li>Parental or Guardian Contact Information</li>
+            </ul>
+        </section>
+
+        <hr>
+
+        <!-- CALL TO ACTION -->
+        <section class="cta-section">
+            <h2>Ready for Your Child's Future?</h2>
+            <p>We are ready to guide your child towards a future of excellence and purpose.</p>
+            <a role="button" href="contact.html">Contact Us</a>
+        </section>
+    </main>
+
+    <!-- FOOTER -->
+    <footer>
+        <div class="footer-logo">
+            <a href="index.html">
+                <img src="media/logo.webp" alt="School Logo" class="logo" loading="lazy">
+            </a>
+        </div>
+        <div class="quick-links">
+            <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
+            <a href="programs.html">Academics</a>
+            <a href="admissions.html">How to enroll</a>
+            <a href="resources.html">Resources</a>
+        </div>
+        <p>&copy;Rwimbogo Nursery and Primary School 2025</p>
+    </footer>
+
+    <script src="js/script.js" defer></script>
+</body>
 </html>
