--- a/admissions.html
+++ b/admissions.html
@@ -34,7 +34,7 @@
     <!-- MAIN CONTENT -->
     <main>
         <!-- HERO SECTION -->
-        <section class="hero-section hero-admissions" style="background-image: linear-gradient(to right, rgba(0,31,91,0.8) 40%, rgba(0,31,91,0.2)), url('media/background-admissions.webp');">
+        <section class="hero-section hero-admissions" style="background-image: linear-gradient(to right, rgba(0,31,91,0.8) 40%, rgba(0,31,91,0.2)), url('media/background-pic.webp');">
             <div class="hero-content">
                 <h1>Admissions</h1>
             </div>
@@ -102,3 +102,4 @@
     <script src="js/script.js" defer></script>
 </body>
 </html>
+
