--- a/blog.html
+++ b/blog.html
@@ -34,7 +34,7 @@
     <!-- MAIN CONTENT -->
     <main>
         <!-- HERO SECTION -->
-        <section class="hero-section hero-blog" style="background-image: linear-gradient(to right, rgba(0,31,91,0.8) 40%, rgba(0,31,91,0.2)), url('media/background-blog.webp');">
+        <section class="hero-section hero-blog" style="background-image: linear-gradient(to right, rgba(0,31,91,0.8) 40%, rgba(0,31,91,0.2)), url('media/background-pic.webp');">
             <div class="hero-content">
                 <h1>School Blog</h1>
             </div>
@@ -75,3 +75,4 @@
 
     <script src="js/script.js" defer></script>
 </body>
+
