--- a/programs.html
+++ b/programs.html
@@ -34,7 +34,7 @@
     <!-- MAIN CONTENT -->
     <main>
         <!-- HERO SECTION -->
-        <section class="hero-section hero-programs" style="background-image: linear-gradient(to right, rgba(0,31,91,0.8) 40%, rgba(0,31,91,0.2)), url('media/background-programs.webp');">
+        <section class="hero-section hero-programs" style="background-image: linear-gradient(to right, rgba(0,31,91,0.8) 40%, rgba(0,31,91,0.2)), url('media/background-pic.webp');">
             <div class="hero-content">
                 <h1>Our Programs</h1>
             </div>
@@ -161,3 +161,4 @@
     <script src="js/script.js" defer></script>
 </body>
 </html>
+
