--- a/resources.html
+++ b/resources.html
@@ -34,7 +34,7 @@
     <!-- MAIN -->
     <main>
         <!-- HERO SECTION -->
-        <section class="hero-section hero-resources" style="background-image: linear-gradient(to right, rgba(0,31,91,0.8) 40%, rgba(0,31,91,0.2)), url('media/background-resources.webp');">
+        <section class="hero-section hero-resources" style="background-image: linear-gradient(to right, rgba(0,31,91,0.8) 40%, rgba(0,31,91,0.2)), url('media/background-pic.webp');">
             <div class="hero-content">
                 <h1>Resources</h1>
             </div>
@@ -76,3 +76,4 @@
     <script src="js/script.js" defer></script>
 </body>
 </html>
+
