--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta name="description" content="Learn about the history, mission, and vision of Rwimbogo Nursery and Primary School.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- External Resources -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -107,5 +108,6 @@
     <script src="js/script.js" defer></script>
 </body>
 </html>
+
 
 
